# BAFT

./: .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt~  README.md  test_baft.cpp  test_baft_match.cpp  test_daft.cpp  test_daft_match.cpp  write_descriptors.cpp
data/graf/: img1_img2_hom.npy  img1_img3_hom.npy  img1_img4_hom.npy  img1_img5_hom.npy  img1_img6_hom.npy
src/: baft.cpp  baft.h  daft.cpp  daft.h  utils.cpp
